# Saraswati

./: README.md  chainlit.md  prompts.py  pyproject.toml  rag_saraswati.py  saraswati.py
agent_workspace/prompts/: prompt-id-17a4883435164dbcb9e7dcab9f7a008f.json  prompt-id-1ff1c4cffed4458896796ee06d3faa87.json  prompt-id-3b611f6144b6419781a45edac06dcc8c.json  prompt-id-4b3e083749b7408db37e8478c848df15.json  prompt-id-4e72f1b83340421db2c7b35167fd0868.json  prompt-id-6681866e1c284f2789a99e4d79373734.json  prompt-id-8681df084d844eab9e83c26f04d06fe6.json  prompt-id-92700db725744882991032f7dfcd2de6.json  prompt-id-b1d1ab1b6fe24796ba8a2874c80498a1.json  prompt-id-b3d9fb6fdd1247e4ae4d425166766cc8.json  prompt-id-babf9084ca2342b8bc0418feede4656f.json
